added shared_object.move and transfer.move

--- a/Nahem.Q1.Sui.PreR/prereqs/Move.toml
+++ b/Nahem.Q1.Sui.PreR/prereqs/Move.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
+# Sui = { local = "./sui-framework/packages/sui-framework" } # for local testing, but need to fix deny_list_object error
 
 [addresses]
 prereqs = "0x0"
